# gravitino

./: .asf.yaml  .classpath  .gitattributes  .gitignore  .project  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBITING.md  CONTRIBUTING.md  DISCLAIMER.txt  DISCLAIMER_WIP.txt  Dockerfile  GETTING_STARTED.md  GOVERNANCE.md  Jenkinsfile  LICENSE  LICENSE.iceberg  LICENSE.lance  LICENSE.rest  LICENSE.trino  MAINTAINERS.md  NOTICE  NOTICE.iceberg  NOTICE.lance  NOTICE.rest  NOTICE.trino  README.md  ROADMAP  ROADMAP.md  SECURITY.md  SPARK_GLUE_IT_STATUS.md  build.gradle.kts  entrypoint.sh  gradle.properties  gradlew  package-lock.json  pom.xml  settings.gradle.kts
clients/client-python/: .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  __init__.py  build.gradle.kts  pylintrc  pyproject.toml  requirements-dev.txt  requirements-lance.txt  requirements.txt  setup.py  test  test.py  version.ini
clients/client-python/apache_gravitino.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clients/client-python/docs/: Makefile  make.bat
clients/client-python/docs/source/: conf.py  index.rst
clients/client-python/gravitino/: __init__.py  dto.py  gravitino_client.py  meta_change.py  name_identifier.py  namespace.py  service.py  typing.py  utils.py
clients/client-python/gravitino.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clients/client-python/gravitino/ai_engine/: __init__.py  base_connector.py  dask_connector.py  ray_connector.py
clients/client-python/gravitino/api/: __init__.py  audit.py  auditable.py  catalog.py  catalog_change.py  column.py  decimal.py  fileset.py  fileset_change.py  metadata_object.py  metadata_objects.py  metalake.py  metalake_change.py  model.py  model_change.py  model_version.py  model_version_change.py  schema.py  schema_change.py  supports_schemas.py  table.py  table_change.py  type.py  types.py
clients/client-python/gravitino/audit/: caller_context.py  fileset_audit_constants.py  fileset_data_operation.py  internal_client_type.py
clients/client-python/gravitino/auth/: auth_constants.py  auth_data_provider.py  basic_auth_provider.py  default_oauth2_token_provider.py  default_oauth_to_token_provider.py  oauth2_token_provider.py  simple_auth_provider.py
clients/client-python/gravitino/catalog/: __init__.py  base_schema_catalog.py  fileset_catalog.py  relational_catalog.py
clients/client-python/gravitino/client/: __init__.py  base_schema_catalog.py  dto_converters.py  fileset_catalog.py  function_catalog_operations.py  generic_column.py  generic_fileset.py  generic_function.py  generic_function_catalog.py  generic_job_handle.py  generic_model.py  generic_model_catalog.py  generic_model_version.py  generic_schema.py  generic_table.py  generic_tag.py  generic_view.py  gravitino_admin_client.py  gravitino_client.py  gravitino_client_base.py  gravitino_client_config.py  gravitino_metalake.py  gravitino_version.py  metadata_object_credential_operations.py  metadata_object_impl.py  metadata_object_role_operations.py  metadata_object_statistics_operations.py  metadata_object_tag_operations.py  relational_catalog.py  relational_table.py
clients/client-python/gravitino/constants/: doc.py  error.py  root.py  timeout.py  (+1 more)
clients/client-python/pygravitino/: __init__.py
clients/client-python/scripts/: generate_doc.py  generate_version.py  run_lance_ray_matrix.py
clients/client-python/tests/: fixtures.py  integration_test_env.py  test_foobar.py  test_gravitino_admin_client.py  test_gravitino_client.py  test_gravitino_metalake.py  test_integration_gravitino_client.py  utils.py
clients/filesystem-fuse/: Cargo.toml  Makefile  README.md  build.gradle.kts  check_rust_env.sh  rust-toolchain.toml
clients/filesystem-fuse/.cargo/: config.toml
clients/filesystem-fuse/conf/: gvfs_fuse.toml  gvfs_test.toml
clients/filesystem-fuse/etc/: gvfs.toml
clients/filesystem-fuse/src/: cloud_storage_filesystem.rs  command_args.rs  config.rs  default_raw_filesystem.rs  error.rs  file_handle_manager.rs  filesystem.rs  filesystem_metadata.rs  fuse_api_handle.rs  fuse_api_handle_debug.rs  fuse_server.rs  gravitino_client.rs  gravitino_compose_filesystem.rs  gravitino_fileset_filesystem.rs  gravitino_filesystem.rs  gvfs_creator.rs  gvfs_fileset_fs.rs  gvfs_fuse.rs  gvfs_mutiple_fileset_fs.rs  lib.rs  log_filesystem.rs  log_fuse_api_handle.rs  main.rs  memory_filesystem.rs  mount.rs  open_dal_filesystem.rs  opened_file.rs  opened_file_manager.rs  s3_filesystem.rs  storage_filesystem.rs  utils.rs
clients/filesystem-fuse/tests/: fuse_test.rs  it.rs  start_backend.sh
clients/filesystem-fuse/tools/: run.py
mcp-server/: .gitignore  NOTICE  README.md  build.gradle.kts  find_table.py  get_table_structure.py  pylintrc  pyproject.toml
mcp-server/dev/: INSPECTOR_DEMO.md  run_authz_integration_test.sh  start_inspector_demo.sh  stop_inspector_demo.sh
mcp-server/gravitino_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp-server/mcp_server/: __init__.py  __main__.py  client.py  main.py  server.py
mcp-server/mcp_server/client/: __init__.py  catalog_operation.py  factory.py  fileset_operation.py  gravitino_operation.py  job_operation.py  model_operation.py  partition_operation.py  policy_operation.py  schema_operation.py  statistic_operation.py  table_operation.py  tag_operation.py  topic_operation.py  view_operation.py
mcp-server/mcp_server/connector/: __init__.py  catalog_operation.py  factory.py  gravitino_operation.py  schema_operation.py  table_operation.py  tag_operation.py
mcp-server/mcp_server/core/: __init__.py  audit.py  context.py  parser.py  setting.py
mcp-server/mcp_server/tools/: __init__.py  catalog.py  fileset.py  job.py  metadata.py  model.py  partition.py  policy.py  schema.py  statistic.py  table.py  tag.py  topic.py  view.py
mcp-server/tests/integration/: conftest.py  gravitino_setup.py  test_authz_e2e.py
mcp-server/tests/unit/: test_audit.py  test_auth_flow.py  test_per_request_token.py  test_transport_tls.py
(+14477 files in other folders)
