# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "filesystem-fuse"
version = "0.8.0-incubating-SNAPSHOT"
rust-version = "1.75"
edition = "2021"

homepage = "https://gravitino.apache.org"
license = "Apache-2.0"
repository = "https://github.com/apache/gravitino"

[[bin]]
name = "gvfs-fuse"
path = "src/main.rs"

[lib]
name="gvfs_fuse"

[dependencies]
bytes = "1.6.0"
dashmap = "5.5.3"
futures-util = "0.3.30"
fuse3 = { version = "0.8.1", "features" = ["tokio-runtime", "unprivileged"] }
libc = "0.2.164"
log = "0.4.22"
opendal = { version = "0.46.0", features = ["services-s3"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
regex = "1.11.1"
async-trait = "0.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.5"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "0.31"